prevent overflow and style scrollbars

--- a/static/powstyle.css
+++ b/static/powstyle.css
@@ -167,8 +167,26 @@ div.footer-text {
   outline: none;
 }
 
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--main-background);
+}
+::-webkit-scrollbar-button {
+  background-color: var(--main-background);
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--green);
+}
+
 .client-card {
   max-width: 95%;
+  overflow-x: auto;
+}
+
+.card-body {
   overflow-x: auto;
 }
 
